hphp/hack/test/typecheck/dynamic_class.php.exp
WARN: File "dynamic_class.php", line 10, characters 3-9:
Value of type `dynamic` called as a function (Warn[12039])
  File "dynamic_class.php", line 8, characters 8-12:
  This expression has type `dynamic`
ERROR: File "dynamic_class.php", line 10, characters 3-4:
Was expecting a class, but got a string (Typing[4026])
